footer white space fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -471,6 +471,7 @@ header .location-container .location-content p {
   padding: 40px 20px 60px 20px;
   display: flex;
   flex-direction: column;
+  min-height: 510px;
 }
 .restaurants-results .restaurants-results-container {
   display: flex;
@@ -486,20 +487,22 @@ header .location-container .location-content p {
 
 footer {
   background-color: #363636;
+}
+footer .footer-container {
   color: white;
   padding: 25px;
 }
-footer .footer-logo-container {
+footer .footer-container .footer-logo-container {
   font-family: "Shrikhand", sans-serif;
   font-size: 18px;
   margin: 0 auto;
 }
 @media (min-width: 992px) {
-  footer .footer-logo-container {
+  footer .footer-container .footer-logo-container {
     text-align: center;
   }
 }
-footer .footer-links-container {
+footer .footer-container .footer-links-container {
   padding-left: 0;
   list-style-type: none;
   display: flex;
@@ -507,15 +510,15 @@ footer .footer-links-container {
   gap: 8px;
 }
 @media (min-width: 992px) {
-  footer .footer-links-container {
+  footer .footer-container .footer-links-container {
     flex-direction: row;
     justify-content: space-evenly;
   }
 }
-footer .footer-links-container :nth-child(3), footer .footer-links-container :nth-child(4) {
+footer .footer-container .footer-links-container :nth-child(3), footer .footer-container .footer-links-container :nth-child(4) {
   font-weight: 300;
 }
-footer .footer-links-container .footer-link-element i {
+footer .footer-container .footer-links-container .footer-link-element i {
   width: 20px;
 }
 
