--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,32 +1,35 @@
 footer {
     background-color: #363636;
-    color: white;
-    padding: 25px;
-    .footer-logo-container {
-        font-family: 'Shrikhand', sans-serif;
-        font-size: 18px;
-        margin: 0 auto;
-        @media (min-width: 992px) {
-            text-align: center; 
-        }
-    }
-    .footer-links-container {
-        padding-left: 0;
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        @media (min-width: 992px) {
-            flex-direction: row;
-            justify-content: space-evenly;
-        }
-        :nth-child(3), :nth-child(4) {
-            font-weight: 300;
-        }
-        .footer-link-element {
-            i {
-                width: 20px;
+    .footer-container {
+        color: white;
+        padding: 25px;
+        .footer-logo-container {
+            font-family: 'Shrikhand', sans-serif;
+            font-size: 18px;
+            margin: 0 auto;
+            @media (min-width: 992px) {
+                text-align: center; 
             }
         }
+        .footer-links-container {
+            padding-left: 0;
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            @media (min-width: 992px) {
+                flex-direction: row;
+                justify-content: space-evenly;
+            }
+            :nth-child(3), :nth-child(4) {
+                font-weight: 300;
+            }
+            .footer-link-element {
+                i {
+                    width: 20px;
+                }
+            }
+
+    }
     }
 }
