--- a/sass/layouts/_restaurants-results-section.scss
+++ b/sass/layouts/_restaurants-results-section.scss
@@ -3,6 +3,7 @@
     padding: 40px 20px 60px 20px;
     display: flex;
     flex-direction: column;
+    min-height: 510px;
     .restaurants-results-container {
         display: flex;
         flex-direction: column;
